--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+}
 body {
     display: flex;
     justify-content: center;
@@ -18,5 +19,15 @@ body {
 }
 
 .logo {
-    max-width: 50%; /* Ajusta este valor según el tamaño deseado del logo */
+    max-width: 50%;
+    animation: breathing 4s infinite;
+}
+
+@keyframes breathing {
+    0%, 100% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
 }
